# rummage

./: .gitignore  breakpoints.py  breaks.py  justfile  loupe.py  loupe_hooks.py  main.c  pip-requirements-dev.txt  pyproject.toml  rummage.py  rummage_hooks.py  run_lldb.py
rummage/: __init__.py  __main__.py  callbacks.py  core.py  hook_wrappers.py  launch.py  main.py  prelude.py  rummage_hooks.py  run.py  run_lldb.py  venv.py
tests/: rummage_hooks.py
